crates/strider-analyze/tests/snapshots/v2__arm__abi__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x5dc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x60c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x634:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x16:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "24" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x64c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "24" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xb:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v29" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v29" [color="#888888", style=dashed];
  "v29" -> "24" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "30" -> "24" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "30" -> "24" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "31" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "24" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x654:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "31" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "31" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "31" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "38" [label="IndirectBranch", shape=doublecircle, fillcolor="#103a10"];
  "31" -> "38" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "40" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "39" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "31" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v48" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v48" [color="#888888", style=dashed];
  "v48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "31" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "55" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "24" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "59" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v60" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v60" [color="#888888", style=dashed];
  "v60" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "17" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v63" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v63" [color="#888888", style=dashed];
  "v63" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "64" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "65" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "9" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "69" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "64" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "71" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0xa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "74" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "76" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x9:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "77" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v81" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v81" [color="#888888", style=dashed];
  "v81" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "80" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "77" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "82" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v83" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v83" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "84" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "1" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v86" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v86" -> "82" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "87" -> "82" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "87" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0xffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "89" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v90" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v90" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "91" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "89" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "92" -> "89" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v93" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v93" -> "89" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "94" -> "89" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "94" [label="const 0x6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "92" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "95" -> "92" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v96" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v96" -> "92" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "97" -> "92" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "97" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "95" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "98" -> "95" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v99" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v99" -> "95" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "100" -> "95" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "100" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "98" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "101" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v102" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v102" -> "98" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "103" -> "98" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "103" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "101" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "104" -> "101" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v105" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v105" -> "101" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "106" -> "101" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "106" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "104" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
